<resources>
    <string name="app_name">BarcodeCompras 0.1.0.503</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Barcode Compras</string>
    <string name="nav_header_subtitle">barcode.compras@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cancel_button">Cancelar</string>
    <string name="search_button">Buscar</string>
    <string name="search_title">Buscar Compra</string>
    <string name="barcode_hint">Digite Barcode</string>
    <string name="description_hint">Digite Desc Item</string>
    <string name="category_hint">Digite Categoria Item</string>

    <!-- Layout no Mainactivity-->
    <string name="descr_item">Item</string>
    <string name="descr_cat">Categoria</string>
    <string name="preco">Preço</string>
    <string name="quantidade">Quantidade</string>
    <string name="total_qnt">Total</string>
    <string name="periodo">Periodo</string>
    <string name="observacao">OBS</string>
</resources>