<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_bancodados_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- Baixar icons https://fonts.google.com/icons-->
    <!-- 2025.05.08 dos EditText tirei, ficou branco
android:textColor="@android:color/darker_gray" -->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="?attr/actionBarSize">

            <EditText
                android:id="@+id/bc_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Código de Barras"
                android:textColorHint="@color/hint_cinza"
                android:inputType="number"  />

            <EditText
                android:id="@+id/descr_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descr_item"
                android:textColorHint="@color/hint_cinza"
                android:inputType="textCapCharacters|textMultiLine"/>

            <EditText
                android:id="@+id/cat_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descr_cat"
                android:textColorHint="@color/hint_cinza"
                android:inputType="textCapCharacters|textMultiLine" />

            <EditText
                android:id="@+id/preco_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preco"
                android:textColorHint="@color/hint_cinza"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/qnt_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantidade"
                android:textColorHint="@color/hint_cinza"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/total_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/total_qnt"
                android:textColorHint="@color/hint_cinza"
                android:inputType="none" />

            <EditText
                android:id="@+id/periodo_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/periodo"
                android:inputType="number|textCapCharacters" />

            <EditText
                android:id="@+id/obs_compras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observacao"
                android:textColorHint="@color/hint_cinza"
                android:inputType="textCapCharacters|textMultiLine"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/scanButtonMain"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Escanear"
                    android:layout_marginEnd="4dp"
                    app:icon="@drawable/ic_barcode_scanner_24dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addButtonMain"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Adicionar"
                    android:layout_marginStart="4dp"
                    app:icon="@drawable/ic_add_24dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Salvar"
                    android:layout_marginEnd="4dp"
                    android:textColor="?attr/colorOnSurface"
                    app:icon="@drawable/ic_save_24dp"
                    app:iconTint="?attr/colorOnSurface"/> <!-- Ícone branco -->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cancelar"
                    android:layout_marginStart="4dp"
                    android:textColor="?attr/colorOnSurface"
                    app:icon="@drawable/ic_close_24dp"
                    app:iconTint="?attr/colorOnSurface"/> <!-- Cor do ícone adaptável -->
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_searchITEM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:src="@drawable/ic_search"
            app:backgroundTint="@color/teal_700"
            app:tint="@android:color/white"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_mainactivity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>